--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Who\'s That Artist</string>
     <string name="artist_search">Enter the name of an Artist</string>
+    <string name="artist_name">Sample Name</string>
 </resources>
